--- a/package.json
+++ b/package.json
@@ -10,9 +10,12 @@
     "test": "jest"
   },
   "dependencies": {
+    "@notifee/react-native": "^7.8.2",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "^7.6.3",
+    "@react-native-firebase/app": "^20.1.0",
+    "@react-native-firebase/messaging": "^20.1.0",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-native-material/core": "^1.3.7",
     "@react-native-picker/picker": "^2.7.2",
@@ -22,18 +25,24 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "@reduxjs/toolkit": "^2.2.3",
-    "axios": "^1.6.8",
+    "axios": "^1.7.2",
     "moment": "^2.30.1",
+    "peer": "^1.0.2",
+    "peerjs": "^1.5.4",
     "react": "18.2.0",
     "react-native": "0.73.6",
     "react-native-basic-elements": "^1.1.19",
     "react-native-bootsplash": "^5.5.0",
     "react-native-device-info": "^10.13.1",
+    "react-native-document-picker": "^9.3.0",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-image-crop-picker": "^0.40.3",
+    "react-native-image-picker": "^7.1.2",
     "react-native-image-slider-banner": "^1.0.3",
+    "react-native-incall-manager": "^4.2.0",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-link": "^4.1.0",
     "react-native-modal": "^13.0.1",
     "react-native-modal-datetime-picker": "^17.1.0",
     "react-native-otp-textinput": "^1.1.5",
@@ -47,8 +56,12 @@
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.0.3",
+    "react-native-webrtc": "^118.0.7",
     "react-native-webview": "^13.8.4",
-    "react-redux": "^9.1.0"
+    "react-redux": "^9.1.0",
+    "socket.io-client": "^4.7.5",
+    "websocket": "^1.0.35",
+    "ws": "^8.17.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
