--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,4 +1,5 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android">	
+<manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools">
 <uses-feature android:name="android.hardware.camera" />
 <uses-feature android:name="android.hardware.camera.autofocus" />
 <uses-feature android:name="android.hardware.audio.output" />
@@ -11,7 +12,7 @@
 <uses-permission android:name="android.permission.MODIFY_AUDIO_SETTINGS" />
 <uses-permission android:name="android.permission.INTERNET" />
 <uses-permission android:name="android.permission.WAKE_LOCK" />
-	
+	<uses-permission android:name="android.permission.RECEIVE_BOOT_COMPLETED"/>
 <uses-permission android:name="android.permission.POST_NOTIFICATIONS"/>
 
 
@@ -24,6 +25,11 @@
       android:allowBackup="false"
       android:theme="@style/AppTheme"
 	  android:usesCleartextTraffic="true">
+    <meta-data
+            android:name="com.google.firebase.messaging.default_notification_channel_id"
+            android:value="disabled_channel"
+            tools:replace="android:value" />
+      
       <activity
         android:name=".MainActivity"
         android:label="@string/app_name"
@@ -35,6 +41,8 @@
             <action android:name="android.intent.action.MAIN" />
             <category android:name="android.intent.category.LAUNCHER" />
         </intent-filter>
+        
       </activity>
+         
     </application>
 </manifest>
