--- a/package.json
+++ b/package.json
@@ -25,22 +25,27 @@
     "@react-navigation/native-stack": "^6.9.26",
     "@react-navigation/stack": "^6.3.29",
     "@reduxjs/toolkit": "^2.2.3",
+    "@zegocloud/zego-uikit-prebuilt-call-rn": "^5.3.1",
+    "@zegocloud/zego-uikit-rn": "^2.10.1",
     "axios": "^1.7.2",
     "moment": "^2.30.1",
     "peer": "^1.0.2",
     "peerjs": "^1.5.4",
     "react": "18.2.0",
+    "react-delegate-component": "^1.0.0",
     "react-native": "0.73.6",
     "react-native-basic-elements": "^1.1.19",
     "react-native-bootsplash": "^5.5.0",
     "react-native-device-info": "^10.13.1",
     "react-native-document-picker": "^9.3.0",
+    "react-native-encrypted-storage": "^4.0.3",
     "react-native-gesture-handler": "^2.16.0",
     "react-native-gifted-chat": "^2.4.0",
     "react-native-image-crop-picker": "^0.40.3",
     "react-native-image-picker": "^7.1.2",
     "react-native-image-slider-banner": "^1.0.3",
     "react-native-incall-manager": "^4.2.0",
+    "react-native-keep-awake": "4.0.0",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-link": "^4.1.0",
     "react-native-modal": "^13.0.1",
@@ -50,9 +55,10 @@
     "react-native-reanimated": "^3.8.1",
     "react-native-render-html": "^6.3.4",
     "react-native-responsive-dimensions": "^3.1.1",
-    "react-native-safe-area-context": "^4.9.0",
-    "react-native-screens": "^3.30.1",
+    "react-native-safe-area-context": "^4.10.5",
+    "react-native-screens": "^3.32.0",
     "react-native-skeleton-placeholder": "^5.2.4",
+    "react-native-sound": "^0.11.2",
     "react-native-swipe-list-view": "^3.2.9",
     "react-native-swiper": "^1.6.0",
     "react-native-vector-icons": "^10.0.3",
@@ -61,7 +67,10 @@
     "react-redux": "^9.1.0",
     "socket.io-client": "^4.7.5",
     "websocket": "^1.0.35",
-    "ws": "^8.17.0"
+    "ws": "^8.17.0",
+    "zego-express-engine-reactnative": "3.14.5",
+    "zego-zim-react-native": "2.12.1",
+    "zego-zpns-react-native": "2.5.2-alpha"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
