--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-native-community/checkbox": "^0.5.17",
     "@react-native-community/datetimepicker": "^7.6.3",
     "@react-native-firebase/app": "^20.1.0",
+    "@react-native-firebase/firestore": "^20.1.0",
     "@react-native-firebase/messaging": "^20.1.0",
     "@react-native-masked-view/masked-view": "^0.2.9",
     "@react-native-material/core": "^1.3.7",
